twolebot-main/twolebot-main/tests/ui/private_work_service.stderr
error[E0603]: module `service` is private
 --> tests/ui/private_work_service.rs:1:21
  |
1 | use twolebot::work::service::WorkService;
  |                     ^^^^^^^ private module
  |
note: the module `service` is defined here
 --> src/work/mod.rs
  |
  | mod service;
  | ^^^^^^^^^^^
