twolebot-main/twolebot-main/tests/ui/private_work_service.rs
use twolebot::work::service::WorkService;

fn main() {
    let _ = std::any::type_name::<WorkService>();
}
